--- a/templates/all_students.html
+++ b/templates/all_students.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'index.html' %}
 
 {% load static %}
 <link rel="stylesheet" href="{% static 'styles/table.css' %}" />
